--- a/.github/workflows/update_news.yml
+++ b/.github/workflows/update_news.yml
@@ -2,7 +2,7 @@ name: Update Basketball News
 
 on:
   schedule:
-    - cron: "0 * * * *"  # รันทุกชั่วโมง (UTC)
+    - cron: "0 23 * * *" # อัปเดตเวลา 11:00 PM ทุกวัน
   workflow_dispatch:  # ให้สามารถรัน workflow ด้วยตัวเองได้
 
 permissions:
